Fixed background image on login page. It wasn't working on safari... Now it is

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,12 +5,10 @@
     padding-bottom: 300px;
     overflow: hidden;
 }
-.wishy-background {
-    width: 100%;
-    height: 100%;
-    min-height:1100px;
 
-    background: black url('/img/background-image.jpg') 0px -10px/cover fixed;
+.wishy-background-image-try {
+    width: 100vw;
+    height: auto;
     animation: scroll-bg 70s infinite;
     animation-fill-mode: forwards;
     padding-bottom: 300px;
